update from relay

--- a/documentation/Enrichment.ipynb
+++ b/documentation/Enrichment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "caring-bacteria",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "graphic-exemption",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "ecological-rhythm",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "thick-encounter",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "immune-adoption",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "moved-uruguay",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "revolutionary-brazilian",
    "metadata": {},
    "outputs": [],
@@ -122,6 +122,8 @@
     "        }\n",
     "    }\n",
     "    for n in identifiers:\n",
+    "        if n.startswith('NCBIGene'):\n",
+    "            n = f\"NCBIGENE:{n.split(':')[1]}\"\n",
     "        em['message']['knowledge_graph']['nodes'][n]= {'category':[biolink_category]}\n",
     "        em['message']['results'].append( {'node_bindings': {'n1':[{\"id\": n}]}, 'edge_bindings': {} })\n",
     "    return coalesce(em)"
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "ordered-condition",
    "metadata": {},
    "outputs": [],
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "dressed-imperial",
    "metadata": {},
    "outputs": [],
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "acceptable-premiere",
    "metadata": {},
    "outputs": [],
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "gothic-philosophy",
    "metadata": {},
    "outputs": [
@@ -484,7 +486,7 @@
        "28               1               1          Original"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
