--- a/documentation/Enrichment.ipynb
+++ b/documentation/Enrichment.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "def coalesce(em):\n",
-    "    return post('coalesce','https://answercoalesce.renci.org/coalesce/all',em)"
+    "    return post('coalesce','https://answercoalesce.renci.org/1.1/coalesce/all',em)"
    ]
   },
   {
@@ -89,14 +89,14 @@
    "source": [
     "def normalize(ids):\n",
     "    j = {'curies':ids}\n",
-    "    result = post('nn','https://nodenormalization-sri.renci.org/get_normalized_nodes',j)\n",
+    "    result = post('nn','https://nodenormalization-sri.renci.org/1.1/get_normalized_nodes',j)\n",
     "    new_ids = [ v['id']['identifier'] for k,v in result.items() ]\n",
     "    return new_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "revolutionary-brazilian",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
     "                  {\n",
     "                    \"nodes\": {\n",
     "                        \"n1\": {\n",
-    "                            \"category\": [ biolink_category ]\n",
+    "                            \"categories\": [ biolink_category ]\n",
     "                            }\n",
     "                    },\n",
     "                    \"edges\":{}  \n",
@@ -122,8 +122,6 @@
     "        }\n",
     "    }\n",
     "    for n in identifiers:\n",
-    "        if n.startswith('NCBIGene'):\n",
-    "            n = f\"NCBIGENE:{n.split(':')[1]}\"\n",
     "        em['message']['knowledge_graph']['nodes'][n]= {'category':[biolink_category]}\n",
     "        em['message']['results'].append( {'node_bindings': {'n1':[{\"id\": n}]}, 'edge_bindings': {} })\n",
     "    return coalesce(em)"
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "ordered-condition",
    "metadata": {},
    "outputs": [],
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "dressed-imperial",
    "metadata": {},
    "outputs": [],
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "acceptable-premiere",
    "metadata": {},
    "outputs": [],
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "gothic-philosophy",
    "metadata": {},
    "outputs": [
@@ -278,19 +276,19 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>8</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>12</td>\n",
+       "      <td>8</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -302,67 +300,67 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>12</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2</td>\n",
-       "      <td>11</td>\n",
+       "      <td>14</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>9</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>9</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>5</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2</td>\n",
-       "      <td>12</td>\n",
+       "      <td>7</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2</td>\n",
-       "      <td>12</td>\n",
+       "      <td>5</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>6</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>4</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>7</td>\n",
        "      <td>graph_enrichment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -455,21 +453,21 @@
       ],
       "text/plain": [
        "    N_Answer_Nodes  N_Merged_Nodes            Method\n",
-       "0                2              13  graph_enrichment\n",
-       "1                2              12  graph_enrichment\n",
-       "2                2               8  graph_enrichment\n",
+       "0                2               8  graph_enrichment\n",
+       "1                2               8  graph_enrichment\n",
+       "2                2              10  graph_enrichment\n",
        "3                2              12  graph_enrichment\n",
-       "4                2              13  graph_enrichment\n",
-       "5                2              11  graph_enrichment\n",
-       "6                2              13  graph_enrichment\n",
-       "7                2              10  graph_enrichment\n",
-       "8                2              13  graph_enrichment\n",
-       "9                2              13  graph_enrichment\n",
-       "10               2              12  graph_enrichment\n",
-       "11               2              12  graph_enrichment\n",
-       "12               2              13  graph_enrichment\n",
-       "13               2              13  graph_enrichment\n",
-       "14               2              10  graph_enrichment\n",
+       "4                2              12  graph_enrichment\n",
+       "5                2              14  graph_enrichment\n",
+       "6                2               9  graph_enrichment\n",
+       "7                2               9  graph_enrichment\n",
+       "8                2               9  graph_enrichment\n",
+       "9                2               5  graph_enrichment\n",
+       "10               2               7  graph_enrichment\n",
+       "11               2               5  graph_enrichment\n",
+       "12               2               6  graph_enrichment\n",
+       "13               2               4  graph_enrichment\n",
+       "14               2               7  graph_enrichment\n",
        "15               1               1          Original\n",
        "16               1               1          Original\n",
        "17               1               1          Original\n",
@@ -486,7 +484,7 @@
        "28               1               1          Original"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "streaming-effects",
    "metadata": {},
    "outputs": [
